<resources>
    <string name="app_name">Memo</string>
    <string name="title">事件</string>
    <string name="title_edt">事件：</string>
    <string name="address">地点</string>
    <string name="address_edt">地点：</string>
    <string name="add">添加</string>
    <string name="select_time">选择时间</string>
    <string name="select_date">选择日期</string>
    <string name="select_date_hint">请选择日期</string>
    <string name="select_time_hint">请选择时间</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="submit">提交</string>
</resources>
