<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cwc.memo.AddMemoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height_title"
        android:background="@color/blue"
        android:elevation="@dimen/elevation_app_bar">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:text="@string/add"
            android:textSize="@dimen/text_size_title"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_border">

        <EditText
            android:id="@+id/edt_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/bar_height_title"
            android:textSize="@dimen/text_size_content"
            android:textColor="@color/text_color"
            android:hint="@string/title_edt"
            android:gravity="start"/>

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/bar_height_title"
            android:textSize="@dimen/text_size_content"
            android:textColor="@color/text_color"
            android:gravity="start"
            android:hint="@string/address_edt"
            android:layout_marginTop="@dimen/margin_border"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_kind">

            <Button
                android:id="@+id/btn_select_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_date"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/select_date_hint"
                android:textSize="@dimen/text_size_date"
                android:textColor="@color/text_color"
                android:layout_marginLeft="@dimen/margin_content"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_kind">

            <Button
                android:id="@+id/btn_select_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_time"/>

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/select_time_hint"
                android:textSize="@dimen/text_size_date"
                android:textColor="@color/text_color"
                android:layout_marginLeft="@dimen/margin_content"/>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/text_color"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_border"/>

        </RelativeLayout>

    </LinearLayout>







</LinearLayout>
